feat: adds /users/count endpoint
